--- a/index.html
+++ b/index.html
@@ -3,42 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<title>HexJquery</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="all.css">
 </head>
 <body>
 	<div class="wrap">
 		<div class="header">
 			<div class="bar">
-				<div class="bar">
-    <ul>
-        <li class="facebook">
-            <a href="#">
-                <img src="http://icons.iconarchive.com/icons/uiconstock/socialmedia/16/Facebook-icon.png" alt="fb">
-              <span>粉絲團</span>
-            </a>
-        </li>
-      
-        <li  class="twitter">
-            <a href="#">
-                <img src="https://philogb.github.io/assets/img/twitter.png" alt="twitter">
-                <span>聯絡我們</span>
-            </a>
-        </li>
-    </ul>
- </div>
+				<ul>
+					<li class="facebook">
+						<a href="#">
+							<img src="http://icons.iconarchive.com/icons/uiconstock/socialmedia/16/Facebook-icon.png" alt="fb">
+							<span>粉絲團</span>
+						</a>
+					</li>
+
+					<li  class="twitter">
+						<a href="#">
+							<img src="https://philogb.github.io/assets/img/twitter.png" alt="twitter">
+							<span>聯絡我們</span>
+						</a>
+					</li>
+				</ul>
 			</div>
 			<div class="clearfix"></div>
 			<div class="nav">
-				<h1><a href="#"><img src="img/logo.png" alt=""></a></h1>
+				<h1><a href="#">Hex school</a></h1>
 				<ul>
 					<li><a href="#">首頁</a></li>
-					<li><a href="course.html">課程</a></li>
-					<li><a href="faq.html">問與答</a></li>
+					<li><a href="course.html">產品介紹</a></li>
+					<li><a href="faq.html">聯絡我們</a></li>
 				</ul>
 			</div>
 			<div class="clearfix"></div>
 			<div class="swiper">
-				
+				<div class="promo">
+				<h2>六角學院<br>讓你奠定良好的前端基礎</h2>
+				</div>
 			</div>
 		</div>
 		<div class="content">
