--- a/index.html
+++ b/index.html
@@ -37,16 +37,36 @@
 			<div class="clearfix"></div>
 			<div class="swiper">
 				<div class="promo">
-				<h2>六角學院<br>讓你奠定良好的前端基礎</h2>
+					<p>六角學院</p>
+					<p>讓你奠定良好的前端基礎</p>
 				</div>
 			</div>
 		</div>
 		<div class="content">
-			<div class="intro"></div>
-			<div class="intro"></div>
-			<div class="intro"></div>
+			<div class="intro">
+				<img src="http://www1.pu.edu.tw/~s1061666/HexSchool/HTML,CSS%20Final%20PSD/img/images/html5_img.png" alt="">
+				<h4>Html 5 基礎教學</h4>
+				<p>主流前端網站設計的基礎就在六角學院，在這裡不在是填鴨式教學，而是透過實際的範例，瞭解正確的網站開發流程，講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
+			</div>
+			<div class="intro2">
+				<img src="http://www1.pu.edu.tw/~s1061666/HexSchool/HTML,CSS%20Final%20PSD/img/images/responsive_img.png" alt="">
+				<h4>響應式網站設計</h4>
+				<p>響應式網站設計 (Responsive web design)，目前大多使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。六角學院將會提供業界響應式開發方法，讓學生瞭解行動版開發技巧。</p>
+			</div>
+			<div class="intro3">
+				<img src="http://www1.pu.edu.tw/~s1061666/HexSchool/HTML,CSS%20Final%20PSD/img/images/JQuery_img.png" alt="">
+				<h4>jQuery 實戰教學</h4>
+				<ul>
+					本課程有以下特色
+					<li>瞭解變數的使用方法</li>
+					<li>學習並操作DOM</li>
+					<li>學習基本數學運算方法</li>
+					<li>套件的操作及運用</li>
+				</ul>
+			</div>
 			<div class="clearfix"></div>
-			<table class="diff">
+			<h3>線上及實體課程差異</h3>					
+			<table class="table-wrapper">
 				<tr>
 					<th>項目</th>
 					<th>HexSchool 線上課程</th>
@@ -92,9 +112,34 @@
 			</table>	
 		</div>
 		<div class="info">
+			<div class="infotext">
+				<h3>對我們的課程有興趣嗎？</h3>
+				<h3>歡迎留下你的資料</h3>
+			</div>
+			<div class="textarea">
+				<input class="input-wrapper2" type="text">
+			</div>
+			<div class="text-info">
+				<p>姓名</p>
+				<input class="input-wrapper" type="text" value="六角講師">
+				<p>電話</p>
+				<input class="input-wrapper" type="text" value="0912345678">
+				<p>信箱</p>
+				<input class="input-wrapper" type="text" value="hexschool@mails.com">
+				<br>
+				<input class=" submit"type="submit" value="送出">
+			</div>
 			
 		</div>
-		<div class="footer"></div>
+		<div class="clearfix"></div>
+
+		<div class="footer">
+			<img src="img/footerlogo.png" alt="">
+			<div class="contact">
+				<p>聯絡我們：<span>hexschool@gmail.com</span></p>
+				<p>電話：<span>0999123456</span></p>
+			</div>
+		</div>
 	</div>
 	<script type="text/javascript" sÏrc="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<script src="all.js"></script>
